# csv2json

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-build.yml
tojson/: csv2json.py
