[tool.poetry]
name = "tojson"
version = "0.1.0"
description = "A CLI tool to export CSV files to JSON format"
authors = ["Alyetama <malyetama@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
pandas = ">1.0.0"
numpy = ">1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tojson = 'tojson:csv2json.main'
csv2json = 'tojson:csv2json.main'
csvtojson = 'tojson:csv2json.main'
